
2017-04-12 Ron Norman <rjn@inglenet.com>

	* fileio.c,common.c: 
	 Routines which implement functions defined via 'system.def'
	 have been enhanced to use the C API functions to access
	 parameter fields passed on the CALL statement in the COBOL
	 application code.

2017-04-10 Ron Norman <rjn@inglenet.com>

	* move.c,call.c,common.h: 
	  Changed 'len' variables from 'int' to 'size_t' in
	  cob_get_picx, cob_put_picx, cob_get_picx_param, 
	  cob_get_grp_param, cob_put_grp_param

2017-04-07  Ron Norman <rjn@inglenet.com>
	* common.c,coblocal.h,runtime.cfg:
	  Added COB_MF_LS_NULLS,COB_MF_LS_VALIDATE,COB_SHARE_MODE
	  & COB_RETRY_MODE to runtime.cfg
	* fileio.c:
	  Added check for IX,SQ,RL,LS,LA_OPTIONS env var for file 
	  I/O options when IO_fdname is not defined.
	  Added check for mf_ls_nulls and mf_ls_validate options
	  for Micro Focus compatible LINE SEQUENTIAL files

2017-02-12  Ron Norman <rjn@inglenet.com>
	* common.c,common.h:
	  Added check to open trace file on READY TRACE
	* common.h:
	  Added flags to FCD3 for TRACE & STATS
	* fileio.c:
	  Added code to invoke trace and/or stats for EXTFH usage
	  If -ftraceall not used, then open trace_file when defined
	  and the file had 'trace_io' set true

2017-02-07  Ron Norman <rjn@inglenet.com>
	* common.c,common.h,coblocal.h:
	  Added COB_STATS_RECORD & COB_STATS_FILE to runtime.cfg
	* fileio.c:
	  Added stats code to save_status.
	  Added check for IO_fdname and check for 'stats' option

2017-02-07  Ron Norman <rjn@inglenet.com>
	* common.c,common.h,coblocal.h:
	  Added COB_TRACE_IO to runtime.cfg
	* termio.c:
	  Added cob_print_field to be used by fileio Trace code
	* fileio.c:
	  Added trace code to save_status.
	  Added check for IO_fdname and check for 'trace' option

2017-02-06  Ron Norman <rjn@inglenet.com>
	* common.c,common.h:
	  Added cob_module_free so that structure gets freed within libcob
	* fileio.c:
	  Added new routines cob_file_external_addr,cob_file_malloc